--- a/XAI/Base.lproj/Main_iPhone.storyboard
+++ b/XAI/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -330,6 +330,7 @@
                         <segue destination="vuV-w2-93q" kind="push" identifier="xaidevshowpushid" id="hON-TG-aQy"/>
                         <segue destination="InB-zr-4fm" kind="push" identifier="xaidoorpushid" id="zum-Cn-0Nq"/>
                         <segue destination="5TM-1k-jGh" kind="push" identifier="xaiwindowpushid" id="MBc-kP-kJs"/>
+                        <segue destination="0fI-iX-HnT" kind="push" identifier="xaiirpush" id="rdQ-9N-Phe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MKb-is-auv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -838,6 +839,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RlK-Hv-nh4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1051" y="-1180"/>
+        </scene>
+        <!--XAIDoorStatusVC-->
+        <scene sceneID="kiL-Nb-fau">
+            <objects>
+                <viewController storyboardIdentifier="XAIIRStatusVCID" id="0fI-iX-HnT" userLabel="XAIDoorStatusVC" customClass="XAIIRStatusVC" sceneMemberID="viewController">
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="RMQ-Eg-g5E">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="1Si-1r-I5M">
+                                <rect key="frame" x="43" y="83" width="234" height="234"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="S2o-69-MdS"/>
+                    <connections>
+                        <outlet property="statusView" destination="1Si-1r-I5M" id="vZ9-Ss-LLh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3y2-Wt-8Gp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="475" y="-2886"/>
         </scene>
     </scenes>
     <resources>
